# blank_envs

./: .gitignore  README.md
.github/: dependabot.yml
python_scratchpad/: .pyrightconfig.json  Dockerfile  Makefile  Makefile.docker  Makefile.local  README.md  docker-compose.yml  employees.json  idea.md  main.py  pyproject.toml  ruff.toml  run_sensor.py
python_scratchpad/__tests__/: test_main.py  test_run_sensor.py
python_scratchpad/src/: .env.example  download.py  main.py
python_scratchpad/src/__tests__/: test_main.py
python_scratchpad/src/scripts/: my_cool_script.py  upgrade_dependencies.py
react_scratchpad/: package-lock.json  package.json
react_scratchpad/public/: index.html
react_scratchpad/src/: App.test.tsx  App.tsx
vite_scratchpad/: .eslintrc.cjs  README.md  blank_envs.code-workspace  index.html  jest.config.ts  package-lock.json  package.json  tsconfig.json
vite_scratchpad/src/: main.css  main.tsx
vite_scratchpad/src/__tests__/: hello_world.tsx
vite_scratchpad/src/__tests__/__snapshots__/: hello_world.tsx.snap
vite_scratchpad/src/queries/: useRepo.tsx  useSources copy.tsx
vite_scratchpad/src/routes/: About.tsx  ErrorPage.tsx  Home.tsx  Root.tsx  Sources.tsx
