[tool.poetry]
name = "python-scratchpad"
version = "0.1.0"
description = ""
authors = ["Nicholas Ferrara <nferrara100@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
requests-mock = "^1.12.1"
types-requests = "^2.32.0.20241016"
ruff = "^0.7.0"
pyright = "^1.1.385"
nickineering-ruff-config = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
update-ruff-base = "nickineering_ruff_config:update_ruff_base"
