[tool.poetry]
name = "python-scratchpad"
version = "0.1.0"
description = ""
authors = ["Nicholas Ferrara <git@nicholasferrara.net>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
requests-mock = "^1.12.1"
types-requests = "^2.32.0.20241016"
ruff = "^0.11.10"
pyright = "^1.1.394"
nickineering-ruff-config = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
update-ruff-base = "nickineering_ruff_config:update_ruff_base"
